# videoplayer_layout

./: README.md  index.html  main.py  pyproject.toml
static/: styles.css
