[tool.poetry]
name = "videoplayer-layout"
version = "0.1.0"
description = ""
authors = ["Sangdak <82779027+Sangdak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "videoplayer_layout"}]

[tool.poetry.dependencies]
python = "^3.11"
livereload = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
